--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Coming soon!
+<html>
+<head>
+<meta http-equiv="refresh" content="0; URL=https://getcare.io" />
+</head>
+<body>
+If you're not redirected automatically, <a href="https://getcare.io">please click here</a>
+</body>
+</html>
